Term refactoring